--- a/test/acceptance/fixtures/examples/fontawesome_xelatex/main.tex
+++ b/test/acceptance/fixtures/examples/fontawesome_xelatex/main.tex
@@ -1,4 +1,8 @@
 \documentclass{article}
+\usepackage{fontspec}
+\defaultfontfeatures{Extension = .otf} % this is needed because
+                                       % fontawesome package loads by
+                                       % font name only
 \usepackage{fontawesome}
 
 \begin{document}
